--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
         "livewire/livewire": "^2.4",
-        "predis/predis": "^1.1"
+        "mad-web/laravel-robots": "^2.1",
+        "predis/predis": "^1.1",
+        "spatie/laravel-sitemap": "^5.8"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
