--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "livewire/livewire": "^2.4",
         "mad-web/laravel-robots": "^2.1",
         "predis/predis": "^1.1",
-        "spatie/laravel-sitemap": "^5.8"
+        "spatie/laravel-medialibrary": "^7.20",
+        "watson/sitemap": "^4.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
