--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "mad-web/laravel-robots": "^2.1",
         "predis/predis": "^1.1",
         "spatie/laravel-medialibrary": "^7.20",
+        "spatie/schema-org": "^3.4",
         "watson/sitemap": "^4.0"
     },
     "require-dev": {
