--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,12 @@
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
+        "laravelium/sitemap": "^8.0",
         "livewire/livewire": "^2.4",
         "mad-web/laravel-robots": "^2.1",
         "predis/predis": "^1.1",
         "spatie/laravel-medialibrary": "^7.20",
-        "spatie/schema-org": "^3.4",
-        "watson/sitemap": "^4.0"
+        "spatie/schema-org": "^3.4"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
