--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravelium/sitemap": "^8.0",
         "livewire/livewire": "^2.4",
         "mad-web/laravel-robots": "^2.1",
+        "magyarandras/amp-converter": "^1.0",
         "predis/predis": "^1.1",
         "spatie/laravel-feed": "^2.7",
         "spatie/laravel-medialibrary": "^7.20",
